Applied Brain#0766's guild gap fix

--- a/release/import.css
+++ b/release/import.css
@@ -8737,7 +8737,7 @@ body .theme-dark .container-3gCOGc .container-1r6BKw .tabBar-1E2ExX .item-3HpYcP
 
 .listItem-2P_4kh {
   width: 70px;
-  height: 70px;
+  height: auto;
   margin: 0; }
 
 .blob-1PX1Gp:active,
