--- a/src/sections/guilds.scss
+++ b/src/sections/guilds.scss
@@ -75,7 +75,7 @@
 // Guilds/List Items
 .listItem-2P_4kh {
     width: 70px;
-    height: 70px;
+    height: auto;
     margin: 0;
 }
 
